[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemyRemover.gd" type="Script" id=1]
[ext_resource path="res://enemy_move.gd" type="Script" id=2]
[ext_resource path="res://enemy.png" type="Texture" id=3]
[ext_resource path="res://EnemyHP.gd" type="Script" id=4]
[ext_resource path="res://Music and effects/falla1.wav" type="AudioStream" id=5]
[ext_resource path="res://Music and effects/falla2.wav" type="AudioStream" id=6]
[ext_resource path="res://enemy1.png" type="Texture" id=7]
[ext_resource path="res://shadow.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Damage_enmy"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Enemy_death"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.27641
height = 10.0556

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.4019
height = 9.59219

[sub_resource type="Animation" id=5]
resource_name = "Enemy_died_l"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 200.0

[node name="Enemy" type="Node2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"enemy",
]]
z_index = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
self_modulate = Color( 1, 0.980392, 0.980392, 1 )
show_behind_parent = true
position = Vector2( 3.36672e-009, 0.225937 )
rotation = -0.174533
z_index = 2
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/Sprite"]
anims/Damage_enmy = SubResource( 1 )
anims/Enemy_death = SubResource( 2 )

[node name="HP" type="Node" parent="KinematicBody2D/Sprite/AnimationPlayer"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -0.677811, 4.06684 )
scale = Vector2( 1.4, 1.4 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( -0.451866, 4.97057 )
shape = SubResource( 4 )

[node name="Hit" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 1.3

[node name="Died" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 6 )
volume_db = -20.0
pitch_scale = 1.2

[node name="Sprite2" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 2.38419e-007, 13 )
rotation = -1.49012e-008
texture = ExtResource( 7 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/Sprite2"]
anims/Enemy_died_l = SubResource( 5 )
anims/Enemy_walk = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite2"]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( -2.08617e-007, 14 )
texture = ExtResource( 8 )

[node name="PlayerCheck" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/PlayerCheck"]
shape = SubResource( 7 )

[connection signal="enemyHasDied" from="KinematicBody2D" to="." method="_on_KinematicBody2D_enemyHasDied"]
[connection signal="animation_finished" from="KinematicBody2D/Sprite/AnimationPlayer" to="KinematicBody2D/Sprite/AnimationPlayer/HP" method="_on_AnimationPlayer_animation_finished"]
[connection signal="tookDamage" from="KinematicBody2D/Sprite/AnimationPlayer/HP" to="KinematicBody2D" method="_on_HP_tookDamage"]
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="finished" from="KinematicBody2D/Died" to="KinematicBody2D" method="_on_Died_finished"]
[connection signal="body_entered" from="KinematicBody2D/PlayerCheck" to="KinematicBody2D" method="_on_PlayerCheck_body_entered"]
